--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-seaborn==0.11.0
 numpy==1.19.4
-stable_baselines==2.10.1
-librosa==0.8.0
-streamlit==0.73.1
-plotly==4.5.1
-pandas==1.1.1
 pydub==0.24.1
+seaborn==0.11.0
+pandas==1.1.1
 gym==0.18.0
+stable_baselines==2.10.1
+plotly==4.5.1
+streamlit==0.73.1
+librosa==0.8.0
 Pillow==8.1.0
 scikit_learn==0.24.1
+tensorflow==1.13.2s
